<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#87a7d6"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dzhm"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/Mr_dzhm" />

        <TextView
            android:id="@+id/tv_ljh"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/Mr_ljh" />

        <TextView
            android:id="@+id/tv_sl"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Mr_sl" />

        <TextView
            android:id="@+id/tv_checkpic"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="查看图片" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_mr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>