<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_title" />

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="#87a7d6"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:paddingLeft="5dp"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:text="@string/bgcz_bgdh" />

        <CheckBox
            android:id="@+id/ckb_yjd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/bgcz_yjd"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/ckb_ych"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/bgcz_ych"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/ckb_wjd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/bgcz_wjd"
            android:textSize="13sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/linearlayout2" >
    </ListView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"
            android:text="继续扫描"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"
            android:text="提交"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</RelativeLayout>